--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: default
 ---
 
@@ -105,7 +105,7 @@ layout: default
                 <!-- 多说评论框 start -->
                 <!--
                 <div class="comment">
-                    <div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{site.url}}{{page.url}}"></div>
+                    <div class="ds-thread" data-thread-key="<%= post.path %>" data-title="<%= post.title %>" data-url=<%= post.permalink %>"></div>
                 </div>
                 -->
                 <!-- 多说评论框 end -->
