--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: default
 ---
 
@@ -195,3 +195,6 @@ var duoshuoQuery = {short_name:"yucan"};
         }
     }
 </style>
+{% if site.intensedebate_comments %}
+  {% include intensedebate-comments.html %}
+{% endif %}
